# traktor-nml-utils

./: .bumpversion.cfg  .treefmt.toml  Argcfile.sh  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
tests/: test_nml_utils.py
tests/fixtures/: collection_smartlist.nml  collection_v4.nml  collection_v4_traktor_format.nml  history_indexing.nml
traktor_nml_utils/: __init__.py  cli.py
traktor_nml_utils/models/: collection.py  history.py
xml_to_xsd/: collection.xsd
